crates/cora-providers/src/snapshots/cora_providers__openai__tests__openai_basic.snap
---
source: crates/cora-providers/src/openai.rs
expression: body
---
{
  "max_tokens": 8192,
  "messages": [
    {
      "content": "You are a test assistant.",
      "role": "system"
    },
    {
      "content": "Hello",
      "role": "user"
    }
  ],
  "model": "test-model",
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
