crates/cora-providers/src/snapshots/cora_providers__openai__tests__openai_with_reasoning_effort.snap
---
source: crates/cora-providers/src/openai.rs
expression: provider.build_request_body(&request)
---
{
  "max_tokens": 8192,
  "messages": [
    {
      "content": "You are a test assistant.",
      "role": "system"
    },
    {
      "content": "hi",
      "role": "user"
    }
  ],
  "model": "test-model",
  "reasoning_effort": "medium",
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
